# gravity-nn

./: .gitignore  CITATION.cff  LICENSE  NOTICE  PATENT.md  README.md  pyproject.toml
configs/: base.yaml  small.yaml  tiny.yaml
examples/: quick_start.py  train_custom.py  train_demo_model.py  visualize_fields.py
gravity/: __init__.py
gravity/layers/: __init__.py  density.py  field_solver.py  field_solver_nd.py  gravity_block.py  local_field_attention.py  physics_features.py
gravity/models/: __init__.py  gravity_2d.py  gravity_3d.py  gravity_4d.py  gravity_lm.py  transformer_lm.py
gravity/utils/: __init__.py  metrics.py  seed.py
notebooks/: README.md  gravity_1d_wikitext2.ipynb  gravity_2d_cifar10.ipynb  gravity_3d_organmnist.ipynb
tests/: test_causality.py  test_o1_state.py  test_shapes.py
